tests/0007-assignment-prefix-operator.src.err
ERROR: unexpected infix operation
 | not a = "value";
         ^
