tests/0007-assignment-prefix-operator.src
let a = 'a';
not a = "value";